--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+bog = { path = "../bog" }
+slotmap = "1"
 
 [dev-dependencies]
 bog = { path = "../bog" }
