--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 bog = { path = "../bog" }
-slotmap = "1"
+hecs = "0.10"
 
 [dev-dependencies]
 bog = { path = "../bog" }
