--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ name = "behavior_registry_1"
 name = "behavior_registry_2"
 
 [[example]]
+name = "behavior_registry_3"
+
+[[example]]
 name = "bog_ui_1"
 
 [[example]]
