--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,9 @@ name = "object_tree_5"
 name = "object_tree_6"
 
 [[example]]
+name = "object_tree_7"
+
+[[example]]
 name = "scene_1"
 
 [[example]]
