--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 bog = { path = "../bog" }
-# hashbrown = "0.15"
+hashbrown = "0.15"
 hecs = "0.10"
 rustc-hash = "2"
 slotmap = "1"
