--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,9 @@ name = "bog_ui_1"
 name = "db_system_1"
 
 [[example]]
+name = "db_system_2"
+
+[[example]]
 name = "function_dropper_1"
 
 [[example]]
